# quickclip

./: Cargo.toml  README.md
src/: defaults.rs  gui.rs  index.rs  init.rs  input.rs  lib.rs  main.rs  util.rs
src/resources/: theme.toml
src/resources/scripts/: bash.txt  init.fish  zsh.txt
