[package]
name = "quickclip"
version = "0.1.3"
edition = "2021"
description = "A CLA that allows you to book mark important directories."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
cursive = { version = "0.20.0", features = ["toml"] }
dirs = "5.0.1"
serde = "1.0.164"
serde_derive = "1.0.164"
toml = "0.7.5"
